--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <javac.target>1.6</javac.target>
-        <unsafe.version>1.0-SNAPSHOT</unsafe.version>
     </properties>
 
     <prerequisites>
@@ -76,17 +76,17 @@
             <dependency>
                 <groupId>net.bramp.unsafe</groupId>
                 <artifactId>unsafe-unroller</artifactId>
-                <version>${unsafe.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.bramp.unsafe</groupId>
                 <artifactId>unsafe-helper</artifactId>
-                <version>${unsafe.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.bramp.unsafe</groupId>
                 <artifactId>unsafe-collection</artifactId>
-                <version>${unsafe.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
@@ -162,8 +162,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>${javac.target}</source>
+                    <target>${javac.target}</target>
                     <encoding>UTF-8</encoding>
                     <!--
                     <compilerArgs>
