--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
+                <groupId>net.bramp.unsafe</groupId>
+                <artifactId>unsafe-tests</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>4.12</version>
@@ -228,11 +233,10 @@
                 <artifactId>maven-deploy-plugin</artifactId>
             </plugin>
 
-            <!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
-                <version>1.5</version>
+                <version>1.6</version>
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
@@ -243,7 +247,6 @@
                     </execution>
                 </executions>
             </plugin>
-            -->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
