--- a/pom.xml
+++ b/pom.xml
@@ -164,7 +164,6 @@
                     <version>2.7</version>
                 </plugin>
                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
                     <version>2.4.1</version>
                 </plugin>
@@ -183,6 +182,9 @@
                 <plugin>
                     <artifactId>maven-release-plugin</artifactId>
                     <version>2.5.2</version>
+                    <configuration>
+                        <releaseProfiles>release</releaseProfiles>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.sonatype.plugins</groupId>
