--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>net.bramp.unsafe</groupId>
     <artifactId>unsafe-parent</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Unsafe</name>
@@ -28,7 +28,7 @@
     <scm>
         <url>https://github.com/bramp/unsafe</url>
         <connection>scm:git:git@github.com:bramp/unsafe.git</connection>
-        <tag>unsafe-parent-1.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <modules>
