--- a/unsafe-benchmark/pom.xml
+++ b/unsafe-benchmark/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>net.bramp.unsafe</groupId>
     <artifactId>unsafe-benchmark</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Unsafe Benchmark</name>
@@ -12,7 +12,7 @@
     <parent>
         <groupId>net.bramp.unsafe</groupId>
         <artifactId>unsafe-parent</artifactId>
-        <version>1.0</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
 
     <properties>
