--- a/unsafe-helper/pom.xml
+++ b/unsafe-helper/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>net.bramp.unsafe</groupId>
     <artifactId>unsafe-helper</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
 
     <name>Unsafe Helper</name>
     <description>Helper class to use the sun.misc.Unsafe class</description>
@@ -12,7 +12,7 @@
     <parent>
         <groupId>net.bramp.unsafe</groupId>
         <artifactId>unsafe-parent</artifactId>
-        <version>1.0</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
 
     <dependencies>
