--- a/unsafe-tests/pom.xml
+++ b/unsafe-tests/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>net.bramp.unsafe</groupId>
     <artifactId>unsafe-tests</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
@@ -20,7 +20,7 @@
     <parent>
         <groupId>net.bramp.unsafe</groupId>
         <artifactId>unsafe-parent</artifactId>
-        <version>1.0</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
 
 </project>
