--- a/unsafe-unroller/pom.xml
+++ b/unsafe-unroller/pom.xml
@@ -2,9 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.bramp.unsafe</groupId>
     <artifactId>unsafe-unroller</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <name>Unsafe Unroller</name>
     <description>Generates loop unrolling bytecode at runtime</description>
@@ -23,7 +22,6 @@
         <dependency>
             <groupId>net.bramp.unsafe</groupId>
             <artifactId>unsafe-helper</artifactId>
-            <version>1.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -38,7 +36,6 @@
         <dependency>
             <groupId>net.bramp.unsafe</groupId>
             <artifactId>unsafe-tests</artifactId>
-            <version>1.1-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
