Added guava-testlib, and pinned the version.

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <javac.target>1.7</javac.target>
+        <guava.version>18.0</guava.version>
     </properties>
 
     <prerequisites>
@@ -65,7 +66,7 @@
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
-                <version>18.0</version>
+                <version>${guava.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.code.findbugs</groupId>
@@ -102,6 +103,12 @@
                 <artifactId>junit</artifactId>
                 <version>4.12</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava-testlib</artifactId>
+                <scope>test</scope>
+                <version>${guava.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
