Added source to the javadoc. Next step, figure out how to redirect to GitHub, instead of storing HTML versions of the source.

--- a/pom.xml
+++ b/pom.xml
@@ -282,6 +282,7 @@
                     <reportOutputDirectory>${project.reporting.outputDirectory}/apidocs</reportOutputDirectory>
                     <destDir>apidocs</destDir>
                     <nohelp>true</nohelp>
+                    <linksource>true</linksource>
                 </configuration>
                 <executions>
                     <execution>
